<resources>
    <string name="app_name">Quandom</string>
    <string name="player_selection_title"># of Players:</string>
    <string name="point_selection_title"># of Questions:</string>
    <string name="quick_play_text">QUICK PLAY</string>
    <string name="custom_play_text">CUSTOM PLAY</string>
    <string name="p1">P1</string>
    <string name="player1_placeholder">Player1</string>
    <string name="p2">P2</string>
    <string name="player2_placeholder">Player2</string>
    <string name="p3">P3</string>
    <string name="player3_placeholder">Player3</string>
    <string name="play_game">PLAY GAME</string>
    <string name="currrent_player_turn">It is %1$s\'s turn!</string>
    <string name="guess">GUESS</string>
    <string name="player_score">%1$s has %2$d points!</string>
    <string name="win_callout">%1$s Wins!</string>
    <string name="play_again">REMATCH</string>
    <string name="back_button_quit">Press BACK again to quit game</string>
    <string name="player4_placeholder">Player4</string>
    <string name="p4">P4</string>
    <string name="cache_switch">Offline mode</string>
    <string name="custom_cats">Categories</string>
    <string name="custom_diff">Difficulty</string>
    <string name="all">Click Here for All</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="entertainment_books">Entertainment: Books</string>
    <string name="entertainment_film">Entertainment: Film</string>
    <string name="entertainment_music">Entertainment: Music</string>
    <string name="entertainment_musicals_theatres">Entertainment: Musicals and Theatres</string>
    <string name="entertainment_television">Entertainment: Television</string>
    <string name="entertainment_video_games">Entertainment: Video Games</string>
    <string name="entertainment_board_games">Entertainment: Board Games</string>
    <string name="entertainment_comics">Entertainment: Comics</string>
    <string name="entertainment_japanese">Entertainment: Japanese Anime and Manga</string>
    <string name="entertainment_cartoons_animations">Entertainment: Cartoons and Animations</string>
    <string name="science_nature">Science and Nature</string>
    <string name="science_computers">Science: Computers</string>
    <string name="science_mathematics">Science: Mathematics</string>
    <string name="science_gadgets">Science: Gadgets</string>
    <string name="mythology">Mythology</string>
    <string name="sports">Sports</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="politics">Politics</string>
    <string name="art">Art</string>
    <string name="celebrities">Celebrities</string>
    <string name="animals">Animals</string>
    <string name="vehicles">Vehicles</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="next_button">NEXT</string>
    <string name="api_error">Error getting questions. Using cached questions</string>
    <string name="fetch_error">Error fetching questions. Please try again.</string>
    <string name="music_switch">Music</string>
    <string name="summary_correct_players">%1$s answered correctly!</string>
    <string name="summary_answer">Answer: &lt;b>%1$s&lt;/b></string>
    <string name="summary">Game Summary</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="player_tie">%1$s Tie!</string>
    <string name="leaderbaord_player_points">%1$s - %2$d correct</string>
    <string name="leaderboard_player_wins">%1$s - %2$d wins</string>
    <string name="summary_no_correct_answer">Nobody answered correctly</string>
    <string name="home_button">HOME</string>
    <string name="change_cat_button">CHANGE CATEGORY</string>
    <string name="info_button_text">&#8942;</string>
    <string name="quick_play_info_text">Players can quickly begin a new game in the default category: General Knowledge\nPlayers must alternately answer multiple choice questions from the selected category. The player with the highest score wins.</string>
    <string name="custom_play_info_text">Players can choose their own category of questions for their game.\nPlayers must alternately answer multiple choice questions from the selected category. The player with the highest score wins.</string>
</resources>
