<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A3765"
    android:orientation="vertical"
    tools:context=".PlayerSelectionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:text="@string/player_selection_title"
                    android:textColor="#03A9F4"
                    android:textSize="24sp" />

                <NumberPicker
                    android:id="@+id/playersPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="130dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="153dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:text="@string/point_selection_title"
                    android:textColor="#03A9F4"
                    android:textSize="24sp" />

                <NumberPicker
                    android:id="@+id/pointsPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="70dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:text="@string/p1"
                    android:textColor="#03A9F4"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/p1NameText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:inputType="text"
                    android:maxEms="7"
                    android:minEms="2"
                    android:text="@string/player1_placeholder"
                    android:textColor="#03A9F4" />

                <Button
                    android:id="@+id/p1Color"
                    android:background="@color/red"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p2Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:text="@string/p2"
                    android:textColor="#03A9F4"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/p2NameText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:inputType="text"
                    android:maxEms="7"
                    android:minEms="2"
                    android:text="@string/player2_placeholder"
                    android:textColor="#03A9F4" />

                <Button
                    android:id="@+id/p2Color"
                    android:background="@color/green"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p3Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:text="@string/p3"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/p3NameText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:inputType="text"
                    android:maxEms="7"
                    android:minEms="2"
                    android:text="@string/player3_placeholder" />

                <Button
                    android:id="@+id/p3Color"
                    android:background="@color/blue"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp" />

            </LinearLayout>

            <Button
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="#0C60A0"
                android:text="@string/play_game"
                android:textColor="#03A9F4" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>