<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/logoColor"
        app:layout_constraintBottom_toTopOf="@+id/quickPlayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/quickPlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginBottom="@dimen/default_vertical_margin"

            android:text="@string/quick_play_text"
            android:textStyle="bold"
            android:textSize="@dimen/big_button_text_size"/>

        <Button
            android:id="@+id/customPlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginBottom="@dimen/default_vertical_margin"

            android:text="@string/custom_play_text"
            android:textSize="@dimen/big_button_text_size"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/musicSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/music_switch_top_pad"
            android:switchPadding="@dimen/cache_switch_padding"
            android:text="@string/music_switch"
            android:textSize="@dimen/player_selection_text_size" />

    </LinearLayout>

</LinearLayout>