<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".WinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/winText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:paddingBottom="40dp"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:text="@string/win_callout"
            android:textAlignment="center"
            android:textSize="@dimen/callout_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin">
            <Button
                android:id="@+id/playAgainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_again"
                android:layout_marginEnd="24dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HOME"
                android:layout_marginEnd="24dp"/>

            <Switch
                android:id="@+id/musicSwitch"
                style="@style/MusicSwitch"
                android:layout_marginTop="0dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:text="@string/summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <!--TODO add a leaderboard-->

        <LinearLayout
            android:id="@+id/summaryQuestionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle">



        </LinearLayout>
    </LinearLayout>

</ScrollView>